# lab_6

./: CMakeLists.txt  folds results 2.csv  folds results.csv  folds results.xlsx  outputs a to c.xlsx  report_lab6.docx
lab6-students/: 308023910_312164569.tar  308023910_312164569.tgz  DataReader.cpp  Evaluation.cpp  Point.cpp  main.cpp
